добавление блоков(отзывы, гарантии, футер, как мы работаем)

--- a/src/index.html
+++ b/src/index.html
@@ -75,30 +75,36 @@
             </h3>
             <div class="services__block">
                 <div class="services__item">
-                    <div class="services__title">
-                        Робимо ВІЗУ для
-                        роботи в Європі
-                    </div>
-                    <div class="services__number">
-                        <img src="img/icon/one.svg" alt="" class="img-svg">
-                    </div>
-                </div>
-                <div class="services__item">
-                    <div class="services__title">
-                        Робимо ВІЗУ для
-                        роботи в Європі
-                    </div>
-                    <div class="services__number">
-                        <img src="img/icon/two.svg" alt="" class="img-svg">
+                    <div class="services__wrapper">
+                        <div class="services__title">
+                            Робимо ВІЗУ для
+                            роботи в Європі
+                        </div>
+                        <div class="services__number">
+                            <img src="img/icon/one.svg" alt="" class="img-svg">
+                        </div>
                     </div>
                 </div>
                 <div class="services__item">
-                    <div class="services__title">
-                        Робимо ВІЗУ для
-                        роботи в Європі
+                    <div class="services__wrapper">
+                        <div class="services__title">
+                            Робимо ВІЗУ для
+                            роботи в Європі
+                        </div>
+                        <div class="services__number">
+                            <img src="img/icon/two.svg" alt="" class="img-svg">
+                        </div>
                     </div>
-                    <div class="services__number">
-                        <img src="img/icon/three.svg" alt="" class="img-svg">
+                </div>
+                <div class="services__item">
+                    <div class="services__wrapper">
+                        <div class="services__title">
+                            Робимо ВІЗУ для
+                            роботи в Європі
+                        </div>
+                        <div class="services__number">
+                            <img src="img/icon/three.svg" alt="" class="img-svg">
+                        </div>
                     </div>
                 </div>
                 <div class="services__item">
@@ -208,7 +214,7 @@
         </div>
     </section>
     
-    <div class="consult">
+    <section class="consult">
         <div class="consult__wrapper"></div>
         <div class="container consult__container">
             <h2 class="title consult__title">
@@ -231,8 +237,139 @@
                 </button>
             </form>
         </div>
-    </div>
+    </section>
+
+    <section class="work">
+        <div class="container">
+            <h2 class="title work__title">
+                Як ми працюємо?
+            </h2>
+            <div class="work__block">
+                <div class="work__item">
+                    <img src="img/icon/one.svg" alt="1" class="img-svg">
+                    <span class="title">Зв'язуємося особисто</span>
+                </div>
+                <div class="work__item">
+                    <img src="img/icon/two.svg" alt="2" class="img-svg">
+                    <span class="title">Зустрічаємося у нас в офісі</span>
+                </div>
+                <div class="work__item">
+                    <img src="img/icon/three.svg" alt="3" class="img-svg">
+                    <span class="title">Вибираємо актуальні вакансії</span>
+                </div>
+                <div class="work__item">
+                    <img src="img/icon/four.svg" alt="4" class="img-svg">
+                    <span class="title">Укладаємо юридичний договір</span>
+                </div>
+                <div class="work__item">
+                    <img src="img/icon/five.svg" alt="5" class="img-svg">
+                    <span class="title">Готуємо всі необхідні документи</span>
+                </div>
+                <div class="work__item">
+                    <img src="img/icon/six.svg" alt="6" class="img-svg">
+                    <span class="title">Призначаємо дату виїзду на вакансію</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="review">
+        <div class="container">
+            <h2 class="review-title title">
+                Відгуки
+            </h2>
+            <div class="review__slider">
+                <img src="img/review.jpg" alt="" class="review__item">
+                <img src="img/review.jpg" alt="" class="review__item">
+                <img src="img/review.jpg" alt="" class="review__item">
+                <img src="img/review.jpg" alt="" class="review__item">
+            </div>
+        </div>
+    </section>
+
+    <section class="warranty">
+        <div class="container">
+            <h2 class="warranty__title title">
+                Гарантії
+            </h2>
+            <div class="warranty__block">
+                <div class="warranty__item">
+                    <img src="img/icon/licensing.svg" alt="license" class="img-svg">
+                    <h3 class="warranty__block--title">
+                        Ліцензія
+                    </h3>
+                    <h4 class="warranty__block--subtitle">
+                        Працюємо згідно ліцензії # 666, все офіційно та легально.
+                    </h4>
+                </div>
+                <div class="warranty__item">
+                    <img src="img/icon/contract-warranty.svg" alt="contact" class="img-svg">
+                    <h3 class="warranty__block--title">
+                        Договір
+                    </h3>
+                    <h4 class="warranty__block--subtitle">
+                        Всі відносини між особами закріплюються юридичним договором.
+                    </h4>
+                </div>
+            </div>
+        </div>
+    </section>
     
+    <footer class="footer">
+        <div class="consult">
+            <div class="consult__wrapper"></div>
+            <div class="container consult__container">
+                <h2 class="title consult__title">
+                    Потрібна консультація з працевлаштування
+                </h2>
+                <h3 class="subtitle consult__subtitle">
+                    Залиште заявку та наш оператор зв’яжеться з вами протягом 15 хвилин
+                </h3>
+                <form action="" method="POST" class="consult-form consult-form--footer">
+                    <div class="consult-form__block">
+                        <label for="footer-name">Ім'я:</label>
+                        <input type="text" name="name" id="footer-name" class="consult-form__input">
+                    </div>
+                    <div class="consult-form__block">
+                        <label for="footer-phone">Телефон:</label>
+                        <input type="text" name="phone" id="footer-phone" class="consult-form__input">
+                    </div>
+                    <button type="submit" class="btn consult-form__btn">
+                        Надіслати
+                    </button>
+                </form>
+
+                <h2 class="title consult__title">
+                    Наші контакти
+                </h2>
+                <div class="footer__block">
+                    <div class="footer__item">
+                        <span>
+                            г. Киев, ул. Беломорская, 1, Арт-завод Платформа
+                            (метро Лесная)
+                        </span>
+                    </div>
+                    <div class="footer__item">
+                        <a class="footer__logo" href="#"><img src="img/logo.png" alt="logo"></a>
+                    </div>
+                    <div class="footer__item">
+                        <ul class="footer__num">
+                            <li><a href="tel:+333333333">+38 (098) 25-37-125</a></li>
+                            <li><a href="tel:+333333333">+38 (098) 25-37-125</a></li>
+                            <li><a href="tel:+333333333">+38 (098) 25-37-125</a></li>
+                        </ul>
+                        <ul class="footer__social">
+                            <li><a href="#"><img src="img/icon/viber.svg" alt="viber" class="img-svg"></a></li>
+                            <li><a href="#"><img src="img/icon/telegram.svg" alt="telegram" class="img-svg"></a></li>
+                            <li><a href="#"><img src="img/icon/instagram.svg" alt="instagram" class="img-svg"></a></li>
+                            <li><a href="#"><img src="img/icon/whtasup.svg" alt="whatsup" class="img-svg"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/slick.min.js"></script>
