--- a/src/index.html
+++ b/src/index.html
@@ -23,20 +23,50 @@
             <div class="menu">
                 <div class="container menu__container">
                     <a href="#" class="menu__logo"><img src="img/logo.png" alt="logo"></a> 
+                    <div class="menu__humburger">
+                        <img src="img/icon/square.svg" alt="menu" class="img-svg">
+                    </div>
                     <ul class="menu__list">
-                        <li class="menu__item">Вакансії</li>
-                        <li class="menu__item">Гарантії</li>
-                        <li class="menu__item">Відгуки</li>
-                        <li class="menu__item">Контакти</li>
-                        <li class="menu__item">Партнерам</li>
+                        <li class="menu__item"><a href="#">Вакансії</a></li>
+                        <li class="menu__item"><a href="#">Гарантії</a></li>
+                        <li class="menu__item"><a href="#">Відгуки</a></li>
+                        <li class="menu__item"><a href="#">Контакти</a></li>
+                        <li class="menu__item"><a href="#">Партнерам</a></li>
                     </ul>
+                </div>
+            </div>
+            <div class="menu__mobile">
+                <div class="menu__mobile--block">
+                    <div class="menu__mobile--close">
+                        <img src="img/icon/close.svg" alt="close" class="img-svg">
+                    </div>
+                    <ul class="menu__list menu__list--mobile">
+                        <li class="menu__item"><a href="#">Вакансії</a></li>
+                        <li class="menu__item"><a href="#">Гарантії</a></li>
+                        <li class="menu__item"><a href="#">Відгуки</a></li>
+                        <li class="menu__item"><a href="#">Контакти</a></li>
+                        <li class="menu__item"><a href="#">Партнерам</a></li>
+                    </ul>
+                    <div class="menu__social">
+                        <ul class="menu__num">
+                            <li><a href="tel:+333333333">+38 (098) 25-37-125</a></li>
+                            <li><a href="tel:+333333333">+38 (098) 25-37-125</a></li>
+                            <li><a href="tel:+333333333">+38 (098) 25-37-125</a></li>
+                        </ul>
+                        <ul class="menu__links">
+                            <li><a href="#"><img src="img/icon/viber.svg" alt="viber" class="img-svg"></a></li>
+                            <li><a href="#"><img src="img/icon/telegram.svg" alt="telegram" class="img-svg"></a></li>
+                            <li><a href="#"><img src="img/icon/instagram.svg" alt="instagram" class="img-svg"></a></li>
+                            <li><a href="#"><img src="img/icon/whtasup.svg" alt="whatsup" class="img-svg"></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <div class="container header__container">
                 <div class="header__block">
                     <h1 class="title header__title">Робота в Європі</h1>
                     <h2 class="subtitle header__subtitle">Офіційне працевлаштування
-                        Заробітна плата 2000$ - 3000$</h2>
+                        <br> Заробітна плата 2000$ - 3000$</h2>
                     <ul class="header__social">
                         <li><a href="#"><img src="img/icon/viber.svg" alt="viber" class="img-svg"></a></li>
                         <li><a href="#"><img src="img/icon/telegram.svg" alt="telegram" class="img-svg"></a></li>
