Добавление блока с новыми вакансиями

--- a/src/index.html
+++ b/src/index.html
@@ -269,6 +269,37 @@
         </div>
     </section>
 
+    <section class="new">
+        <div class="container">
+            <div class="new__title title">
+                Хочете ознайомитись з
+                новими вакансіями?
+            </div>
+            <div class="new__subtitle subtitle">
+                Наші  соціальні мережі з вакансіями
+            </div>
+            <div class="new__block">
+                <div class="new__item">
+                    <div class="new__text">
+                        Щодня ми ведемо пошук нових вакансій, перевіряємо якість та умови наданої роботи,  допомагаємо великій кількості людей знайти високооплачувану роботу в країнах Європи
+                    </div>
+                    <div class="new__social">
+                        <a href="#"><img class="img-svg" src="img/icon/viber-new.svg" alt=""></a>
+                        <a href="#"><img class="img-svg" src="img/icon/telegram-new.svg" alt=""></a>
+                        <a href="#"><img class="img-svg" src="img/icon/whatsup-new.svg" alt=""></a>
+                    </div>
+                    <div class="new__social--bottom">
+                        <a href="#"><img src="img/workua.jpg" alt=""></a>
+                        <a href="#"><img src="img/olx.jpg" alt=""></a>
+                    </div>
+                </div>
+                <div class="new__item new__item--hide">
+                    <img src="img/newimg.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="work">
         <div class="container">
             <h2 class="title work__title">
