--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Робота в Європі</title>
+</head>
+
 <body>
     <div class="preloader">
         <div class="preloader__row">
@@ -430,10 +432,5 @@
             </div>
         </div>
     </footer>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="js/script.js"></script>
 </body>
 </html>
