--- a/src/index.html
+++ b/src/index.html
@@ -434,6 +434,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/SmoothScroll.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
